--- a/estilos_css/estilos.css
+++ b/estilos_css/estilos.css
@@ -6,7 +6,7 @@ body
     font-size: 20px;
     margin: 0;
     padding: 0;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Arial', Courier, monospace;
 }
 
 p
